--- a/test.html
+++ b/test.html
@@ -19,26 +19,10 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <script vulcanize-noinline src="../../../web-component-tester/browser.js"></script>
-  <link rel="import" href="./facets-dive.html">
-<style>
-body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-.header {
-  background-color: #ff6e36;
-  height: 35px;
-  width: 100%;
-}
-</style>
+  <link rel="import" href="./facets-dive-controls.html">
 </head>
 <body>
-  <div class="header"></div>
-  <facets-dive></facets-dive>
+  <facets-dive-controls></facets-dive-controls>
   <script src="test.js"></script>
 </body>
 </html>
