--- a/test.html
+++ b/test.html
@@ -19,10 +19,10 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <script vulcanize-noinline src="../../../web-component-tester/browser.js"></script>
-  <link rel="import" href="./facets-dive-info-card.html">
+  <link rel="import" href="./facets-dive-legend.html">
 </head>
 <body>
-  <facets-dive-info-card></facets-dive-info-card>
+  <facets-dive-legend></facets-dive-legend>
   <script src="test.js"></script>
 </body>
 </html>
